# pymolfile

./: LICENSE  MANIFEST.in  README.md  setup.py  test.py
pymolfile/: __init__.py  plugin_list.py  pymolfile.py
pymolfile/molfile/: CMakeLists.txt  __init__.py  libpymolfile.i  libpymolfile.py  libpymolfile_wrap.cpp  pymolfile.cxx  pymolfile.h
pymolfile/molfile/molfile_plugins/: Make-arch  Makefile
pymolfile/molfile/molfile_plugins/compile/: CMakeLists.txt  FindNetCDF.cmake  silence_plugins.sh
pymolfile/molfile/molfile_plugins/molfile_plugin/: Makefile
pymolfile/molfile/molfile_plugins/molfile_plugin/src/: .main.c.swp  babelplugin.c  plugintest.x
test/: README.md
